# MicroMind-Anomaly

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  LINTING_ERRORS.md  README.md  code_review_MicroMind-Anomaly_2026-03-26.md
.claude/: settings.local.json
docs/superpowers/plans/: 2026-03-26-v0.2-foundation-hardening.md
docs/superpowers/specs/: 2026-03-26-micromind-roadmap-design.md
include/micromind/: config.h  detector.h  inference_engine.h  ring_buffer.h
src/: CMakeLists.txt  detector.cpp  inference_engine.cpp
tests/: CMakeLists.txt  test_detector.cpp  test_inference.cpp  test_ring_buffer.cpp
